--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "categories": [
     "Programming Languages"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/Reuh/vscode-candran.git"
+  },
   "contributes": {
     "languages": [
       {
